--- a/app/templates/app/checkout.html
+++ b/app/templates/app/checkout.html
@@ -23,7 +23,7 @@
     <h4>Select Shipping Address</h4>
     <hr>
       <form action="/paymentdone" id="myform">
-        {% for ad in add %}
+        {% for ad in add %}x23193689
           <div class="card">
             <div class="card-body">
             <h5>{{ad.name}}</h5>
