--- a/app/templates/app/productdetail.html
+++ b/app/templates/app/productdetail.html
@@ -19,7 +19,7 @@
 
 
     </form>
-   <a href="{% url 'buy-now' %}" class="btn btn-danger shadow px-5 py-2 ms-4">Buy Now</a>
+    <a href="{% url 'buy-now' product.id %}" class="btn btn-danger shadow px-5 py-2 ms-4">Buy Now</a>
    <h5 class="mt-5">Available Offers</h5>
    <ul>
     <li>Bank Offer 5% Unlimited Cashback on AIB Credit Card</li>
