--- a/app/templates/app/bottomwear.html
+++ b/app/templates/app/bottomwear.html
@@ -7,9 +7,9 @@
   <div class="col-sm-3">
       <div class="list-group">
           <a href="{% url 'bottomwear' %}" class="list-group-item list-group-item-action" aria-current="true">All Meat and Seafood</a>
-          <a href="{% url 'bottomweardata' 'Beyoung' %}" class="list-group-item list-group-item-action"
+          <a href="{% url 'bottomweardata' 'Chicken' %}" class="list-group-item list-group-item-action"
           aria-currents="true">Meat</a>
-          <a href="{% url 'bottomweardata' 'Lee' %}" class="list-group-item list-group-item-action"
+          <a href="{% url 'bottomweardata' 'Fish' %}" class="list-group-item list-group-item-action"
           aria-currents="true">Seafood</a>
   </div>
 </div>
