--- a/app/templates/app/topwear.html
+++ b/app/templates/app/topwear.html
@@ -7,11 +7,11 @@
   <div class="col-sm-3">
       <div class="list-group">
           <a href="{% url 'topwear' %}" class="list-group-item list-group-item-action" aria-current="true">All Produce</a>
-          <a href="{% url 'topweardata' 'HRX' %}" class="list-group-item list-group-item-action"
+          <a href="{% url 'topweardata' 'Fruits' %}" class="list-group-item list-group-item-action"
           aria-currents="true">Fresh Fruits</a> 
-          <a href="{% url 'topweardata' 'Polo' %}" class="list-group-item list-group-item-action"
+          <a href="{% url 'topweardata' 'Vegetables' %}" class="list-group-item list-group-item-action"
           aria-currents="true">Fresh Vegetables</a>
-          <a href="{% url 'topweardata' 'Park' %}" class="list-group-item list-group-item-action"
+          <a href="{% url 'topweardata' 'Spices' %}" class="list-group-item list-group-item-action"
           aria-currents="true">Herbs and Seasonings</a>
   </div>
 </div>
